fixed issue on login/signup
fixed issue companylogo overlapping

--- a/stlyes/login.css
+++ b/stlyes/login.css
@@ -47,16 +47,16 @@ h3{
     color: white;
 }
 
-.container-1,.container-2{
+.container-1{
     /*positionign*/
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50.05%,-50.05%);
+    padding:40px;
     /*size*/
-    width: 380px; /* for mobile* calc(100vw - 80px);*/
-    height: 660px ;   /* calc(100vh - 80px)*/
-    padding: 40px;
+    width: 380px;
+    height: 660px ; 
     box-shadow: 0px 0px 20px 1px #050505;
 
     /*design*/
@@ -165,11 +165,22 @@ select:focus{
         display: none;
     }
 
-    .container-1,.container-2{
-
+    .main{
+        height: unset;
+        width: unset;
+    }
+    .container-1{
         /*size*/
+        position: unset;
         width:calc(100vw - 80px);
         height:calc(100vh - 80px);
+        transform: unset;
+        /*size*/
+        box-shadow: unset;
+
+    /*design*/
+    background-color: white;
+    text-align: center;
     }
 
     #cancel-btn{
@@ -190,8 +201,16 @@ select:focus{
         padding: 1.5vh 10vw;
     }
 
+    .companyname{
+        overflow: visible;
+        top: 20px;
+    }
     .companyname img{
         width: 70%;
+    }
+
+    .th2{
+        margin-top: -10px ;
     }
 }
 /*MEDIUM DEVICE*/
@@ -233,6 +252,11 @@ select:focus{
         margin: 10px auto ;
         padding: 1.5vh 10vw;
         width: auto;
+    }
+
+        .companyname{
+        overflow: visible;
+        top: 20px;
     }
 
     .companyname img{
